cabal-version:      2.4
name:               alien-invaders
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable alien-invaders
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Assets, PixelProcessing, Alien, Nave, ConstantesGlobais, Mundo, Direcao, Estado

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    ghc-options: -threaded
    build-depends:    base ^>=4.15.1.0, codeworld-api, random, text
    hs-source-dirs:   app
    default-language: Haskell2010
